[B]Version 1.1.79[/B]
Chaturbate - fix tags