@@ -1,2 +1,3 @@
 [B]Version 1.1.79[/B]
 Chaturbate - fix tags
+Jav.Guru - added series and tags, also picks up links like Rapidgator
